[project]
name = "dlrm-ranking"
version = "0.1.0"
description = "Deep Learning Recommendation Model Implementation for Item Ranking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "s3torchconnector>=1.5.0",
    "scikit-learn>=1.8.0",
    "tenacity>=9.1.4",
    "torch>=2.11.0",
    "torchrec>=1.6.0",
]
